# fingera_encode

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/fingera/encode/: base32.h  base58.h  base64.h  bech32.h  compress.h  eos_name.h  eos_symbol.h  hex.h
src/: base32.c  base58.c  base64.c  bech32.c  compress.c  eos_name.c  eos_symbol.c  hex.c
tests/: CMakeLists.txt  test_base32.cpp  test_base58.cpp  test_base64.cpp  test_bech32.cpp  test_compress.cpp  test_eos_name.cpp  test_hex.cpp
